<resources>
    <string name="app_name">ApolloBet</string>
    <string name="strClear">Clear</string>
    <string name="strConfirm">Confirm</string>
    <string name="win">胜</string>
    <string name="draw">平</string>
    <string name="lose">负</string>
    <string name="more">更多</string>
    <string name="strAutoRefresh">自动刷新</string>
    <string name="strAutoSelectByOdds">根据赔率自选</string>
    <string name="strAutoSelectByHandicap">根据盘口自选</string>
    <string name="strAutoSelectByProfitAndLoss">根据盈亏自选</string>
    <string name="spread">让</string>
</resources>
