<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_match"
    android:layout_width="match_parent"
    android:layout_height="128dp"
    android:orientation="horizontal"
    android:padding="4dp"
    android:weightSum="1">

    <!-- left match info -->
    <LinearLayout
        android:id="@+id/left_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:background="@color/colorMatchInfo">

        <TextView
            android:id="@+id/tv_match_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:padding="4dp"
            android:text="008"
            android:textAlignment="center" />

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.01" />

    <!-- right top vs & bottom odds -->
    <LinearLayout
        android:id="@+id/right_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.84"
        android:orientation="vertical"
        android:weightSum="1">

        <!-- top vs -->
        <LinearLayout
            android:id="@+id/right_layout_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

            <TextView
                android:id="@+id/tv_vs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Man vs LivePool"
                android:textAlignment="center" />

        </LinearLayout>

        <!-- bottom odds table & more -->
        <LinearLayout
            android:id="@+id/right_layout_remaining"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal"
            android:weightSum="1">

            <!-- left odds table -->
            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.84"
                android:divider="@drawable/divider_vertical"
                android:orientation="vertical"
                android:showDividers="middle|beginning|end"
                android:weightSum="1">

                <!--spread/win/draw/lose label -->
                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:divider="@drawable/divider_horizontal"
                    android:orientation="horizontal"
                    android:showDividers="beginning|middle|end"
                    android:weightSum="9.8">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"

                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/spread"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"

                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/win"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"

                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/draw"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"

                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/lose"
                        android:textAlignment="center" />
                </TableRow>

                <!--win/draw/lose odds -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:divider="@drawable/divider_horizontal"
                    android:orientation="horizontal"
                    android:showDividers="beginning|middle|end"
                    android:weightSum="9.8">

                    <TextView
                        android:id="@+id/tv_none_spread"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="0"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tv_win_odds"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@color/colorOddNotSelected"
                        android:gravity="center"
                        android:text="0.1"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tv_draw_odds"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@color/colorOddNotSelected"
                        android:gravity="center"
                        android:text="0.2"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tv_lose_odds"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@color/colorOddNotSelected"
                        android:gravity="center"
                        android:text="0.3"
                        android:textAlignment="center" />
                </TableRow>

                <!--spread win/draw/lose odds -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:divider="@drawable/divider_horizontal"
                    android:orientation="horizontal"
                    android:showDividers="beginning|middle|end"
                    android:weightSum="9.8">

                    <TextView
                        android:id="@+id/tv_spread"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="-1"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tv_spread_win_odds"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@color/colorOddNotSelected"
                        android:gravity="center"
                        android:text="0.4"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tv_spread_draw_odds"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@color/colorOddNotSelected"
                        android:gravity="center"
                        android:text="0.5"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tv_spread_lose_odds"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@color/colorOddNotSelected"
                        android:gravity="center"
                        android:text="0.6"
                        android:textAlignment="center" />
                </TableRow>
            </TableLayout>

            <!-- right more -->
            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.16"
                android:divider="@drawable/divider_vertical"
                android:orientation="vertical"
                android:showDividers="middle|beginning|end"
                android:weightSum="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:divider="@drawable/divider_horizontal"
                    android:orientation="horizontal"
                    android:showDividers="middle|end"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/tv_more_odds"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawablePadding="-16dp"
                        android:drawableRight="@drawable/ic_keyboard_arrow_right"
                        android:gravity="start|center_vertical"
                        android:text="@string/more"
                        android:textAlignment="center" />

                </TableRow>

            </TableLayout>
            <!-- //right of more -->

        </LinearLayout>

    </LinearLayout>
    <!-- //right vs and odds -->
</LinearLayout>
